<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetailsView">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="195dp"
        android:layout_height="197dp"
        app:srcCompat="@drawable/starsuckslogo"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_ordered"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/ordered_beverage"
        app:layout_constraintTop_toBottomOf="@id/txtView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:importantForAutofill="yes"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:importantForAutofill="yes"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/smBTN"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/smallheart"
        android:contentDescription="@string/order_button"
        app:layout_constraintTop_toBottomOf="@id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
